--- a/src/tool/synthwerk/www/synthwerk.css
+++ b/src/tool/synthwerk/www/synthwerk.css
@@ -171,6 +171,15 @@ dialog::backdrop {
   height: 20px;
   top: 0px;
   cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.SliderUi > .thumb > .display {
+  font-family: sans-serif;
+  font-size: 8pt;
+  color: #000;
 }
 
 /* HarmonicsUi, EnvUi
